--- a/CSS_S1000D/content.css
+++ b/CSS_S1000D/content.css
@@ -266,6 +266,13 @@ img.s-symbol                    { border: none;}
 .s-prelreqs td, .s-closereqs td { padding: 5px 10px 5px 0px; }
 
 
+/** IPD **/
+
+.s-ipd-table                    { margin-top: 4em; }
+.s-ipd-table td                 { vertical-align: top; padding-left: 5px; border: 1px solid black; } 
+.s-ipd-table th                 { text-align: left; padding-left: 5px; border: 1px solid black; } 
+
+
 /** EXISTING EREADER **/
 
 
