Updates for bilingual ZH project
Corrections for change tracking

--- a/Lib_BIL/CSS/content.css
+++ b/Lib_BIL/CSS/content.css
@@ -756,7 +756,7 @@
 .x-revst-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; background-color:#CCCCCC; }
 
 .x-row-1-0 {margin-left: 0pt; margin-right: 0pt; }
-.x-row-1-1 {}
+.x-row-1-1 {background-color:#CCCCCC;}
 
 .x-rp-1-0 {margin-left: 0pt; margin-right: 0pt; text-indent: 0pt; }
 
