--- a/C#/Project/PWC Bilingual Publication/EuCA.Pwc.Pub.UI/View/ShellView.xaml
+++ b/C#/Project/PWC Bilingual Publication/EuCA.Pwc.Pub.UI/View/ShellView.xaml
@@ -2,16 +2,23 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Mahapps="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="{Binding Title}" Height="260" Width="600"
+        Title="{Binding Title}" Height="300" Width="600"
         ResizeMode="CanResizeWithGrip"
         BorderBrush="{DynamicResource AccentColorBrush}"
         EnableDWMDropShadow="True"
         WindowTransitionsEnabled="False"
         BorderThickness="1"
-        WindowStartupLocation="CenterScreen">
-    <Grid Margin="15" 
-                     Cursor="{Binding ShellCursor}">
+        WindowStartupLocation="CenterScreen"
+        Cursor="{Binding ShellCursor}">
+
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolToVis" />
+    </Window.Resources>
+    
+    <Grid Margin="15">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -31,12 +38,12 @@
         <TextBox    Grid.Row="0" Grid.Column="1" 
                     Margin="0 0 10 10"
                     Text="{Binding FileOrig, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    IsEnabled="{Binding Enabled}"/>
+                    IsEnabled="{Binding IsEnabled}"/>
         <Button     Grid.Row="0" Grid.Column="2" 
                     Content="..."
                     Margin="0 0 0 10"
                     Command="{Binding BrowseCommand}" CommandParameter="FileOrig"
-                    IsEnabled="{Binding Enabled}"/>
+                    IsEnabled="{Binding IsEnabled}"/>
 
         <Label      Grid.Row="1" Grid.Column="0"
                     Margin="0 0 10 10"
@@ -44,12 +51,12 @@
         <TextBox    Grid.Row="1" Grid.Column="1" 
                     Margin="0 0 10 10"
                     Text="{Binding FileTrad, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    IsEnabled="{Binding Enabled}"/>
+                    IsEnabled="{Binding v}"/>
         <Button     Grid.Row="1" Grid.Column="2" 
                     Content="..."
                     Margin="0 0 0 10"
                     Command="{Binding BrowseCommand}" CommandParameter="FileTrad"
-                    IsEnabled="{Binding Enabled}"/>
+                    IsEnabled="{Binding IsEnabled}"/>
 
         <Label      Grid.Row="2" Grid.Column="0"
                     Margin="0 0 10 10"
@@ -57,12 +64,12 @@
         <TextBox    Grid.Row="2" Grid.Column="1" 
                     Margin="0 0 10 10"
                     Text="{Binding DirXsl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    IsEnabled="{Binding Enabled}"/>
+                    IsEnabled="{Binding IsEnabled}"/>
         <Button     Grid.Row="2" Grid.Column="2" 
                     Content="..."
                     Margin="0 0 0 10"
                     Command="{Binding BrowseCommand}" CommandParameter="DirXsl"
-                    IsEnabled="{Binding Enabled}"/>
+                    IsEnabled="{Binding IsEnabled}"/>
 
         <Label      Grid.Row="3" Grid.Column="0"
                     Margin="0 0 10 10"
@@ -70,20 +77,34 @@
         <TextBox    Grid.Row="3" Grid.Column="1" 
                     Margin="0 0 10 10"
                     Text="{Binding DirOut, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    IsEnabled="{Binding Enabled}"/>
+                    IsEnabled="{Binding IsEnabled}"/>
         <Button     Grid.Row="3" Grid.Column="2" 
                     Content="..."
                     Margin="0 0 0 10"
                     Command="{Binding BrowseCommand}" CommandParameter="DirOut"
-                    IsEnabled="{Binding Enabled}"/>
+                    IsEnabled="{Binding IsEnabled}"/>
 
         <CheckBox   Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" 
                     Content="Delete temporary files" 
                     IsChecked="{Binding DeleteTempFile}"
-                    IsEnabled="{Binding Enabled}"/>
-        <!--<ProgressBar Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Stretch" Margin="5 0 0 0" IsIndeterminate="True"/>-->
-        
-        <DockPanel Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="2" 
+                    IsEnabled="{Binding IsEnabled}"/>
+
+        <Label Grid.Row="5" Grid.Column="0" 
+               Margin="0 10 0 0"
+               Content="Status" 
+               Visibility="{Binding IsProcessing, Converter={StaticResource BoolToVis}}"/>
+        <ProgressBar Grid.Row="5" Grid.Column="1"
+                     Margin="0 10 10 0" HorizontalAlignment="Stretch"
+                     Value="{Binding ProgressValue}"
+                     Visibility="{Binding IsProcessing, Converter={StaticResource BoolToVis}}"/>
+
+        <Label Grid.Row="6" Grid.Column="1"
+               HorizontalAlignment="Stretch"
+               Content="{Binding ProgressLabel}"
+               Padding="0" Margin="0 0 10 0"
+               Visibility="{Binding IsProcessing, Converter={StaticResource BoolToVis}}" />
+
+        <DockPanel Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" 
                    HorizontalAlignment="Right" 
                    Margin="0 0 10 0"
                    Cursor="Arrow">
@@ -93,6 +114,6 @@
             <Button DockPanel.Dock="Right" Content="Publish"
                     Command="{Binding PublishCommand}"/>
         </DockPanel>
-        
+
     </Grid>
 </Mahapps:MetroWindow>
