--- a/CSS_S1000D/content.css
+++ b/CSS_S1000D/content.css
@@ -269,8 +269,8 @@ img.s-symbol                    { border: none;}
 /** IPD **/
 
 .s-ipd-table                    { margin-top: 4em; }
-.s-ipd-table td                 { vertical-align: top; padding-left: 5px; border: 1px solid black; } 
-.s-ipd-table th                 { text-align: left; padding-left: 5px; border: 1px solid black; } 
+.s-ipd-table td                 { vertical-align: top; padding-left: 5px; }
+.s-ipd-table th                 { text-align: left; padding-left: 5px; border-bottom: 1px solid black; } 
 
 
 /** EXISTING EREADER **/
